--- a/html/calculadora.html
+++ b/html/calculadora.html
@@ -4,6 +4,33 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+
+    <script>
+        function sumarNumeros(primero, segundo) {
+            var n1 = parseInt(primero)
+            var n2 = parseInt(segundo)
+            console.log('Funcion sumarNumeros' + n1)
+            console.log('Funcion sumarNumeros' + n2)
+            var resultado = n1 + n2;
+            console.log(resultado);
+            document.getElementById('idResultado2').innerText = resultado;
+            return resultado;
+        }
+        function restarNumeros(primero, segundo) {
+            return primero - segundo;
+        }
+
+        function sumarNumerosCompleto() {
+            var n1 = parseInt(document.getElementById('idnumero1').value)
+            var n2 = parseInt(document.getElementById('idnumero2').value)
+            console.log('Funcion sumarNumeros' + n1)
+            console.log('Funcion sumarNumeros' + n2)
+            var resultado = n1 + n2;
+            console.log(resultado);
+            document.getElementById('idResultado2').innerText = resultado;
+            return resultado;
+        }
+    </script>
 </head>
 <body>
     <header>
@@ -30,6 +57,10 @@
         <div id="idDiv">
             <!--<button>Hola</button>-->
         </div>
+        <h2>JS Interno</h2>
+        <button onclick="sumarNumeros(document.getElementById('idnumero1').value, document.getElementById('idnumero2').value)">Sumar interno incompleto</button>
+        <button onclick="sumarNumerosCompleto()">Sumar interno completo</button>
+        <label id="idResultado2" for=""></label>
     </section>
     <footer>
         Todos los derechos reservados
