--- a/html/estudianteFormulario.html
+++ b/html/estudianteFormulario.html
@@ -26,7 +26,7 @@
                     <p type="Apellido:"><input type="text"></p>
                     <p type="Genero:"><input type="text"></p>
                     <p type="Pais:"><input type="text"></p>
-                    <p type="Hobbie:"><input type="text"></p>
+                    <p type="Hobby:"><input type="text"></p>
                     <div class="boton">
                         <button>Guardar</button>
                     </div>
