--- a/html/paginaVue.html
+++ b/html/paginaVue.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 
+    <!-- CDN -->
     <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
 </head>
 
@@ -21,6 +22,11 @@
             <h6>{{1+1}}</h6>
             <p>{{[1, 2, 3, 4, 5, 6, 7, 8]}}</p>
             <p>{{false?'Verdadero': 'Falso'}}</p>
+
+            <p>{{mensaje}}</p>
+            <p>{{valor}}</p>
+            <button v-on:click="cambiarMensaje">Cambiar Mensaje</button>
+            <button v-on:click="cambiarNumero">Sumar</button>
         </div>
         <script src="../js/app.js"></script>
     </section>
