--- a/html/paginaVue.html
+++ b/html/paginaVue.html
@@ -33,14 +33,16 @@
             <label for="idNombre">Nombre: </label>
             <input v-on:keypress="presionandoTecla" id="idNombre" type="text" v-model="nombre">
             <label for="idApellido">Apellido: </label>
-            <input v-on:keypress="presionandoEnter" id="idApellido" type="text" v-model="apellido">
+            <input @keypress.enter="presionandoEnterMod" id="idApellido" type="text" v-model="apellido">
             <button v-on:click="agregarEstudiante">Agregar</button>
             {{nombre}}
             {{apellido}}
 
             <ul>
-                <li v-for="({nombre, apellido}, index) in lista">{{index+1}}: {{nombre}} - {{apellido}} 
-                    <button>Editar</button></li>
+                <li v-for="({nombre, apellido}, index) in lista">
+                    <p v-if="nombre!==''">{{index+1}}: {{nombre}} - {{apellido}} </p>
+                    <button v-if="nombre!==''">Editar</button>
+                </li>
             </ul>
         </div>
         <script src="../js/app.js"></script>
